--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 /dataset/
+/.idea/.gitignore
+/.idea/concrete_cnn.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/vcs.xml
